# IRS-PM-2024-01-13-IS06PT-GRP-Cinepaw-AI

./: .gitattributes  .gitignore  README.md
SystemCode/: .gitattributes  README.md  dockerfile  dump.rdb  poetry.lock.bak  prepare.py  pyproject.toml  supervisord.conf
SystemCode/backend/: .env  .gitattributes  LoisNotebook.ipynb  app.py  db.py  google_search.py  manage.py  model.py  requirements.txt
SystemCode/backend/.ipynb_checkpoints/: app-checkpoint.py
SystemCode/backend/actions/: __init__.py  mark.py  recommend_everyday.py  search.py
SystemCode/backend/chatbot/: __init__.py  chatbot.py  message.py  previouschat.py
SystemCode/backend/chroma_data/: chroma.sqlite3
SystemCode/backend/database/: chroma.sqlite3
SystemCode/backend/templates/: appendchat.jinja2  bak_rerank.jinja2  bear.jinja2  build_query.jinja2  chat_search.jinja2  preference.jinja2  prevchat.jinja2  query_recall.jinja2  rerank.jinja2
SystemCode/docker/: dockerfile
SystemCode/experiments/: NCF-test.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  chroma.pl  chroma_test.ipynb  db_function.py  deepmatch.ipynb  demo_movie_data.ipynb  function_test.ipynb  kombu.ipynb  load_data.py  ml-25m.ipynb  model_testing.ipynb  my-deepmatch.ipynb  preprocess.py  rec_model_test.ipynb  sqllite.py  sqllite_dataset_upload.py  test.csv  test.ipynb  tmdb.ipynb  tmp.ipynb  train.csv  user_emb.h5  user_emb_25m-3.h5  user_emb_25m.h5  xDeepFM-test.ipynb
SystemCode/experiments/chroma_data/: chroma.sqlite3
SystemCode/frontend/: package-lock.json  package.json
SystemCode/frontend/app/: block.tsx  page.tsx  (+3 more)
(+10 files in other folders)
