[tool.poetry]
name = "cinepaw"
version = "0.1.0"
description = ""
authors = ["tao.wang <wym0604@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
fastapi = "^0.110.0"
kombu = "^5.3.5"
openai = "^1.14.1"
uvicorn = "^0.28.0"
jinja2 = "^3.1.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
