[tool.poetry]
name = "cinepaw"
version = "0.1.0"
description = ""
authors = ["tao.wang <wym0604@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow-io-gcs-filesystem= "^0.31.0"
loguru = "^0.7.2"
fastapi = "^0.110.0"
kombu = "^5.3.5"
openai = "^1.14.1"
uvicorn = "^0.28.0"
jinja2 = "^3.1.3"
requests = "^2.31.0"
redis = "^5.0.3"
sqlalchemy = "^2.0.29"
ipykernel = "^6.29.3"
deepmatch = "^0.3.1"
pandas = "^2.2.1"
numpy = "^1.26.4"
scipy = "^1.12.0"
h5py = "3.7.0"
tensorflow = {version = "2.11.0", extras = ["gpu"]}
scikit-learn = "^1.4.1.post1"
faiss-cpu = "^1.8.0"
qdrant-client = "^1.8.2"
jupyterlab = "^4.1.5"
chromadb = "^0.4.24"
cython = "<3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
